# blendsurf

./: .dockerignore  CMakeLists.txt  README  README.md  makefile  makefile.in
.github/workflows/: dockerimage.yml  rebuild-docker-image.yml
cmake/: blendsurf-config.cmake
docker/: Dockerfile  entrypoint.sh
include/: CMakeLists.txt  bdsurf.hpp  bdulib.hpp  blas_lapack.h  ccsubmatlib.hpp  ccsurf.hpp  ccsurfop.hpp  common.hpp  cvect.hpp  evalfromw.hpp  gpmesh.hpp  hmatrix.hpp  mat2t.hpp  mat3t.hpp  nummatrix.hpp  numvector.hpp  quat.hpp  quaternion.hpp  svdrep.hpp  utils.hpp  vec2t.hpp  vec3t.hpp  vecmatop.hpp
src/: CMakeLists.txt  bdsurf.cpp  bdulib.cpp  ccsubmatlib.cpp  ccsurf.cpp  ccsurfop.cpp  evalfromw.cpp  gpmesh.cpp  quaternion.cpp  splinebasis.c  splinebasis.d  svdrep.cpp  utils.cpp  vecmatop.cpp
vis/: CMakeLists.txt  arcball.cpp  arcball.hpp  ballviewer.cpp  ballviewer.hpp  bdrender.cpp  bdsurfobj.cpp  bdsurfobj.hpp  camera.cpp  camera.hpp  ccsurfobj.cpp  ccsurfobj.hpp  geoobject.hpp  glcheck.hpp  psOpenGL.cpp  psOpenGL.h  reflmap.cpp  reflmap.h  texture.cpp  texture.hpp  uiaction.hpp  viewer.cpp  viewer.hpp  viewer3d.cpp  viewer3d.hpp  visoption3d  vistt0.cpp  vistt0_sampleout.cpp
